--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 .nav2{
     width: 70%;
     float: right;
-    background-color: aqua;
+    background-color: rgb(12, 237, 12);
 }
 .nav2a{
     font-weight: 500;
